CMAKE_MINIMUM_REQUIRED (VERSION 3.0)

PROJECT (fsbridge)

#SET(CMAKE_CXX_FLAGS "-g -Wall -Werror -std=c++11")

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(FUSE REQUIRED fuse)

FIND_PACKAGE(Threads)

# apt-get install protobuf-compiler libprotobuf-dev
INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER message.proto)
ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})

FILE(GLOB SRC "*.cpp")
ADD_EXECUTABLE(fsbridge ${SRC})
TARGET_LINK_LIBRARIES(fsbridge proto
                      ${FUSE_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${PROTOBUF_LIBRARY})
TARGET_INCLUDE_DIRECTORIES(fsbridge PUBLIC ${FUSE_INCLUDE_DIRS})
TARGET_COMPILE_OPTIONS(fsbridge PUBLIC ${FUSE_CFLAGS_OTHER})

# message(${FUSE_LIBRARIES} ${FUSE_INCLUDE_DIRS} ${FUSE_CFLAGS_OTHER})
